examples/resolver/primitives/fail/alloc_size_mismatch.axo
const ptr = alloc("8")
print(ptr)
